<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_clientId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_id_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/til_et">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_deviceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/deviceType"
        app:layout_constraintStart_toStartOf="@id/til_et"
        app:layout_constraintTop_toBottomOf="@id/til_email" />

    <RadioGroup
        android:id="@+id/rg_deviceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/tv_deviceType">

        <RadioButton
            android:id="@+id/rbLynk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ayuLynk" />

        <RadioButton
            android:id="@+id/rbSynk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ayuSynk" />

        <RadioButton
            android:id="@+id/rbDongle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dongle" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/mode"
        app:layout_constraintStart_toStartOf="@id/rg_deviceType"
        app:layout_constraintTop_toBottomOf="@id/rg_deviceType" />

    <RadioGroup
        android:id="@+id/rg_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/tv_mode">

        <RadioButton
            android:id="@+id/rbRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/record_share" />

        <RadioButton
            android:id="@+id/rbOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/online_streaming" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_hidePatientSupportTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/rg_mode"
        app:layout_constraintTop_toBottomOf="@id/rg_mode" />

    <TextView
        android:id="@+id/tv_hidePatientSupportTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hide_tab"
        app:layout_constraintBottom_toBottomOf="@id/cb_hidePatientSupportTab"
        app:layout_constraintStart_toEndOf="@id/cb_hidePatientSupportTab"
        app:layout_constraintTop_toTopOf="@id/cb_hidePatientSupportTab" />

    <CheckBox
    android:id="@+id/cb_hideNavigationOption"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/rg_mode"
    app:layout_constraintTop_toBottomOf="@id/cb_hidePatientSupportTab" />

    <TextView
        android:id="@+id/tv_hideNavigationOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hide_option"
        app:layout_constraintBottom_toBottomOf="@id/cb_hideNavigationOption"
        app:layout_constraintStart_toEndOf="@id/cb_hideNavigationOption"
        app:layout_constraintTop_toTopOf="@id/cb_hideNavigationOption" />

    <CheckBox
        android:id="@+id/cb_disableEarphoneRequirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/rg_mode"
        app:layout_constraintTop_toBottomOf="@id/cb_hideNavigationOption" />

    <TextView
        android:id="@+id/tv_disableEarphoneRequirement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/disable_earphone"
        app:layout_constraintBottom_toBottomOf="@id/cb_disableEarphoneRequirement"
        app:layout_constraintStart_toEndOf="@id/cb_disableEarphoneRequirement"
        app:layout_constraintTop_toTopOf="@id/cb_disableEarphoneRequirement" />

    <Button
        android:id="@+id/btn_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/open"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_disableEarphoneRequirement" />

</androidx.constraintlayout.widget.ConstraintLayout>